kubernetes-jenkins/ingress-jenkins.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: devops-tools
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /jenkins
            backend:
              serviceName: jenkins
              servicePort: 80
